<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/item_alterar_senha"
        android:orderInCategory="100"
        android:title="@string/item_alterar_senha"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_sair"
        android:icon="@drawable/ic_action_exit"
        android:orderInCategory="200"
        android:title="@string/item_sair"
        app:showAsAction="never" />
    <item
        android:id="@+id/perfil_usuario"
        android:icon="@drawable/ic_action_user"
        android:orderInCategory="300"
        android:title="@string/item_perfil_usuario"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ajuda"
        android:icon="@drawable/ic_help"
        android:orderInCategory="400"
        android:title="Ajuda"
        app:showAsAction="ifRoom" />

</menu>