<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.ajudaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/textViewTituloOriFin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:text="@string/orientacoes_financeiras"
            android:textSize="@dimen/titulo_ajuda"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ImageView
            android:id="@+id/imageViewMaisOriFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textOrientacoesFinanceiras"
            app:srcCompat="@drawable/ic_expandi" />

        <TextView
            android:id="@+id/textOrientacoesFinanceiras"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cartao_corporativo"
            android:textSize="@dimen/tamanho_texto_formulario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewMaisOriFin"
            app:layout_constraintTop_toBottomOf="@+id/textViewTituloOriFin" />

        <TextView
            android:id="@+id/textViewRecolheOriFin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/texto_cartao_corporativo"
            android:textAlignment="viewStart"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textOrientacoesFinanceiras"
            app:layout_constraintTop_toBottomOf="@+id/imageViewMaisOriFin" />

        <ImageView
            android:id="@+id/imageViewMaisConfAprovGastos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textConferenciaAprovaGastos"
            app:srcCompat="@drawable/ic_expandi" />

        <TextView
            android:id="@+id/textConferenciaAprovaGastos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/confe_aprova_gastos"
            android:textSize="@dimen/tamanho_texto_formulario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewMaisConfAprovGastos"
            app:layout_constraintTop_toBottomOf="@+id/textViewRecolheOriFin" />

        <TextView
            android:id="@+id/textViewRecolheConferenciaAprova"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/texto_conferencia_aprovacao"
            android:textAlignment="viewStart"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textConferenciaAprovaGastos"
            app:layout_constraintTop_toBottomOf="@+id/textConferenciaAprovaGastos" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>