<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.PrestarContasActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/texto_despesa"
            android:textSize="@dimen/tamanho_texto_formulario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textViewIdDespesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="2dp"
            android:textAlignment="viewEnd"
            android:textSize="@dimen/tamanho_texto_formulario"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewData"
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/cantos_arredondados"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Spinner
            android:id="@+id/spinnerClassificarDespesa"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cantos_arredondados"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewData"
            app:layout_constraintTop_toTopOf="@+id/textViewData" />

        <Spinner
            android:id="@+id/spinnerTipoDespesa"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cantos_arredondados"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewData" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cliente"
            android:textSize="@dimen/tamanho_texto_formulario"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/spinnerTipoDespesa" />

        <Spinner
            android:id="@+id/spinnerCliente"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cantos_arredondados"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/editFilialLoja"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:maxLength="50"
            android:background="@drawable/cantos_arredondados"
            android:hint="Filial / Loja"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCliente" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/chamado"
            android:textSize="@dimen/tamanho_texto_formulario"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/editFilialLoja" />

        <EditText
            android:id="@+id/editNumeroChamado"
            android:layout_width="105dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/cantos_arredondados"
            android:ems="10"
            android:hint="Número"
            android:maxLength="6"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editPlacaCarro"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cantos_arredondados"
            android:ems="10"
            android:hint="Placa Carro"
            android:maxLength="8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editNumeroChamado"
            app:layout_constraintTop_toTopOf="@+id/editNumeroChamado" />

        <EditText
            android:id="@+id/editDescricao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cantos_arredondados"
            android:gravity="top"
            android:hint="Descrição"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLength="108"
            android:maxLines="3"
            android:textSize="@dimen/tamanho_texto_formulario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNumeroChamado" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/comprovante"
            android:textSize="@dimen/tamanho_texto_formulario"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/editDescricao" />

        <Spinner
            android:id="@+id/spinnerComprovanteTipo"
            android:layout_width="150dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/cantos_arredondados"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/editCnpj"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/cantos_arredondados"
            android:ems="10"
            android:hint="CNPJ"
            android:inputType="number"
            android:maxLength="18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerComprovanteTipo" />

        <EditText
            android:id="@+id/editCpf"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cantos_arredondados"
            android:ems="10"
            android:hint="CPF"
            android:inputType="number"
            android:maxLength="14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editCnpj"
            app:layout_constraintTop_toBottomOf="@+id/spinnerComprovanteTipo" />

        <EditText
            android:id="@+id/editValorComprovante"
            android:layout_width="119dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/cantos_arredondados"
            android:ems="10"
            android:hint="Valor"
            android:inputType="numberDecimal"
            android:maxLength="12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCpf" />

        <EditText
            android:id="@+id/editNumeroComprovante"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cantos_arredondados"
            android:ems="10"
            android:hint="Número"
            android:inputType="number"
            android:maxLength="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editValorComprovante"
            app:layout_constraintTop_toBottomOf="@+id/editCpf" />

        <Spinner
            android:id="@+id/spinnerFormaPagamento"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cantos_arredondados"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editValorComprovante" />

        <ImageView
            android:id="@+id/imageCapturaComprovante"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/spinnerFormaPagamento"
            app:layout_constraintTop_toBottomOf="@+id/spinnerFormaPagamento"
            app:srcCompat="@drawable/ic_camera_foreground" />

        <TextView
            android:id="@+id/textViewNovaImagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/tamanho_texto_formulario"
            app:layout_constraintStart_toEndOf="@+id/imageCapturaComprovante"
            app:layout_constraintTop_toTopOf="@+id/imageCapturaComprovante" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/botao_enviar_prestacao"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageCapturaComprovante" />

        <ImageView
            android:id="@+id/imageViewComprovante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageCapturaComprovante"
            app:layout_constraintTop_toBottomOf="@+id/imageCapturaComprovante" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>